grammar.js
  source_file: $ => repeat(choice(
    $.namespace_or_using_declaration,
    $.object_declaration,
    $.directive,
    $._atom,
  )),

  object_declaration: $ => prec(2, seq(
    field('kind', choice(
      choice(
      $.kw_codeunit,
      $.kw_controladdin,
      $.kw_dotnet,
      $.kw_entitlement,
      $.kw_enum,
      $.kw_enumextension,
      $.kw_interface,
      $.kw_page,
      $.kw_pagecustomization,
      $.kw_pageextension,
      $.kw_permissionset,
      $.kw_permissionsetextension,
      $.kw_profile,
      $.kw_profileextension,
      $.kw_query,
      $.kw_report,
      $.kw_reportextension,
      $.kw_table,
      $.kw_tableextension,
      $.kw_value,
      $.kw_xmlport,
    ),
      $.object_keyword
    )),
    field('id', optional($.integer)),
    field('name', optional($.name_or_keyword)),
    // Conditional compilation can split an object header across branches.
    repeat($._pre_object_body),
    field('body', $.object_body),
  )),

  _pre_object_body: $ => choice(
    $.object_modifier,
    $.implements_clause,
    $.parenthesized_block,
    $.bracketed_block,
    // A bare metadata keyword conflicts with object_modifier and is excluded.
    $.string,
    $.verbatim_string,
    $.quoted_identifier,
    $.integer,
    $.identifier,
    $.control_keyword,
    $.operator_word,
    $.object_keyword,
    $.type_keyword,
    $.property_keyword,
    $.keyword,
    $.operator,
    $.semicolon,
    $.comma,
  ),

  object_body: $ => prec.right(seq(
    '{',
    repeat($._object_body_item),
    '}',
  )),

  _object_body_item: $ => choice(
    $.enum_value_declaration,
    $.key_declaration,
    $.object_section,
    $.property_assignment,
    $.object_var_section,
    $.empty_var_section,
    $.variable_declaration,
    $.event_declaration,
    $.procedure_declaration,
    $.trigger_declaration,
    $.braced_block,
    $.parenthesized_block,
    $.bracketed_block,
    $.semicolon,
  ),

  // Reusing object_body keeps nested declarations structurally parsed.
  var_section: $ => prec.right(3, seq(
    $.kw_var,
    $.variable_declaration,
    repeat($.variable_declaration),
  )),

  variable_declaration: $ => prec(1, choice(
    seq(repeat1($.attribute), $.regular_variable_declaration),
    seq(repeat1($.attribute), $.label_declaration),
    $.regular_variable_declaration,
    $.label_declaration,
  )),

  regular_variable_declaration: $ => prec(1, seq(
    field('name', $.name_or_keyword),
    repeat(seq($.comma, field('name', $.name_or_keyword))),
    field('sep', $.operator),
    field('type', $.type_reference),
    optional(seq(field('assign', $.operator), field('value', $.expression))),
    $.semicolon,
  )),

  // AL type references may include object names, dimensions, and modifiers.
  type_reference: $ => prec.right(1, choice(
    prec(4, $.option_type),
    seq(
      choice(
        choice(
      $.kw_action,
      $.kw_actionref,
      $.kw_analysisview,
      $.kw_analysisviews,
      $.kw_array,
      $.kw_auditcategory,
      $.kw_automation,
      $.kw_biginteger,
      $.kw_bigtext,
      $.kw_blob,
      $.kw_boolean,
      $.kw_byte,
      $.kw_char,
      $.kw_clienttype,
      $.kw_code,
      $.kw_codeunit,
      $.kw_completiontriggererrorlevel,
      $.kw_connectiontype,
      $.kw_cookie,
      $.kw_customaction,
      $.kw_database,
      $.kw_dataclassification,
      $.kw_datascope,
      $.kw_datatransfer,
      $.kw_date,
      $.kw_dateformula,
      $.kw_datetime,
      $.kw_decimal,
      $.kw_defaultlayout,
      $.kw_dialog,
      $.kw_dictionary,
      $.kw_dotnet,
      $.kw_dotnetassembly,
      $.kw_dotnettypedeclaration,
      $.kw_duration,
      $.kw_enum,
      $.kw_errorinfo,
      $.kw_errortype,
      $.kw_executioncontext,
      $.kw_executionmode,
      $.kw_fieldclass,
      $.kw_fieldref,
      $.kw_fieldtype,
      $.kw_file,
      $.kw_fileupload,
      $.kw_fileuploadaction,
      $.kw_filterpagebuilder,
      $.kw_guid,
      $.kw_httpclient,
      $.kw_httpcontent,
      $.kw_httpheaders,
      $.kw_httprequestmessage,
      $.kw_httprequesttype,
      $.kw_httpresponsemessage,
      $.kw_instream,
      $.kw_integer,
      $.kw_interface,
      $.kw_isolationlevel,
      $.kw_joker,
      $.kw_jsonarray,
      $.kw_jsonobject,
      $.kw_jsontoken,
      $.kw_jsonvalue,
      $.kw_keyref,
      $.kw_list,
      $.kw_media,
      $.kw_mediaset,
      $.kw_moduledependencyinfo,
      $.kw_moduleinfo,
      $.kw_none,
      $.kw_notification,
      $.kw_notificationscope,
      $.kw_objecttype,
      $.kw_outstream,
      $.kw_page,
      $.kw_pagebackgroundtaskerrorlevel,
      $.kw_pageresult,
      $.kw_pagestyle,
      $.kw_query,
      $.kw_record,
      $.kw_recordid,
      $.kw_recordref,
      $.kw_report,
      $.kw_reportformat,
      $.kw_secrettext,
      $.kw_securityfilter,
      $.kw_securityfiltering,
      $.kw_securityoperationresult,
      $.kw_sessionsettings,
      $.kw_systemaction,
      $.kw_table,
      $.kw_tableconnectiontype,
      $.kw_tablefilter,
      $.kw_testaction,
      $.kw_testfield,
      $.kw_testfilterfield,
      $.kw_testhttprequestmessage,
      $.kw_testhttpresponsemessage,
      $.kw_testpage,
      $.kw_testpermissions,
      $.kw_testrequestpage,
      $.kw_text,
      $.kw_textbuilder,
      $.kw_textconst,
      $.kw_textencoding,
      $.kw_time,
      $.kw_transactionmodel,
      $.kw_transactiontype,
      $.kw_variant,
      $.kw_verbosity,
      $.kw_version,
      $.kw_view,
      $.kw_views,
      $.kw_webserviceactioncontext,
      $.kw_webserviceactionresultcode,
      $.kw_xmlattribute,
      $.kw_xmlattributecollection,
      $.kw_xmlcdata,
      $.kw_xmlcomment,
      $.kw_xmldeclaration,
      $.kw_xmldocument,
      $.kw_xmldocumenttype,
      $.kw_xmlelement,
      $.kw_xmlnamespacemanager,
      $.kw_xmlnametable,
      $.kw_xmlnode,
      $.kw_xmlnodelist,
      $.kw_xmlport,
      $.kw_xmlprocessinginstruction,
      $.kw_xmlreadoptions,
      $.kw_xmltext,
      $.kw_xmlwriteoptions,
    ),
        $.type_keyword,
        $.object_keyword
      ),
      repeat(choice(
        $.qualified_name,
        prec(2, $.name_or_keyword),
        $.integer,
        $.string,
        $.parenthesized_block,
        $.bracketed_block,
        $.of_clause,
        $.kw_temporary,
      )),
    ),
    $.qualified_name,
    $.name_or_keyword,
    $.bracketed_block,
    $.parenthesized_block,
  )),

  procedure_declaration: $ => choice(
    $.event_procedure_declaration,
    prec.right(2, seq(
      repeat($.attribute),
      repeat($.member_modifier),
      choice($.kw_procedure, $.kw_function),
      field('name', $.name),
      field('parameters', $.parameter_list),
      optional(choice(
        seq(
          field('return_var', $.name_or_keyword),
          field('returns', $.operator),
          field('return_type', $.type_reference),
        ),
        seq(
          field('returns', $.operator),
          field('return_type', $.type_reference),
        ),
      )),
      choice(
        prec(1, seq(
          optional($.semicolon),
          choice(
            seq($.var_section, $.begin_end_block),
            seq($.empty_var_section, $.begin_end_block),
            $.begin_end_block,
          ),
          optional($.semicolon),
        )),
        // Interface procedure signatures may omit the terminator.
        prec(-1, optional($.semicolon)),
      ),
    )),
  ),

  parameter_list: $ => seq(
    '(',
    optional(seq(
      $.parameter,
      repeat(seq($.semicolon, $.parameter)),
    )),
    ')',
  ),

  statement_list: $ => prec.right(seq(
    choice(
      $.statement,
      seq($.semicolon, optional($.statement)),
    ),
    repeat(seq($.semicolon, optional($.statement))),
  )),

  begin_end_block: $ => prec.right(7, seq(
    $.kw_begin,
    optional($.statement_list),
    $.kw_end,
  )),

  statement: $ => choice(
    $.begin_end_block,
    $.if_statement,
    $.empty_if_statement,
    $.case_statement,
    $.for_statement,
    $.foreach_statement,
    $.while_statement,
    $.repeat_statement,
    $.with_statement,
    $.asserterror_statement,
    $.exit_statement,
    $.break_statement,
    $.continue_statement,
    $.expression_statement,
  ),

  if_statement: $ => prec.right(2, seq(
    $.kw_if,
    field('condition', $.expression),
    $.kw_then,
    field('consequence', $.statement),
    optional(seq($.kw_else, field('alternative', $.statement))),
  )),

  for_statement: $ => prec.right(seq(
    $.kw_for,
    field('iterator', $.identifier),
    field('assign', $.operator),
    field('from', $.expression),
    field('direction', choice($.kw_to, $.kw_downto)),
    field('to', $.expression),
    $.kw_do,
    field('body', $.statement),
  )),

  break_statement: $ => prec.dynamic(1, $.kw_break),

  continue_statement: $ => prec.dynamic(1, $.kw_continue),

  expression: $ => prec.left(0, seq(
    $.unary_expression,
    repeat(seq($.binary_operator, $.unary_expression)),
  )),

  unary_expression: $ => prec.right(2, choice(
    seq($.unary_operator, $.unary_expression),
    $.postfix_expression,
  )),

  binary_operator: $ => choice(
    $.operator_word,
    $.kw_in,
    $.operator,
  ),

  postfix_expression: $ => prec.right(4, seq(
    $.primary_expression,
    repeat(choice(
      $.member_call_suffix,
      $.scope_call_suffix,
      prec(6, $.call_suffix),
      $.member_suffix,
      $.scope_suffix,
      $.index_suffix,
    )),
  )),

  primary_expression: $ => choice(
    $.name,
    $.type_keyword,
    $.string,
    $.verbatim_string,
    $.date_literal,
    $.time_literal,
    $.datetime_literal,
    $.decimal,
    $.integer,
    $.bracketed_block,
    prec(-1, $.parenthesized_expression),
  ),

  name: $ => choice(
    $.identifier,
    $.quoted_identifier,
    alias($.kw_break, $.identifier),
    alias($.kw_continue, $.identifier),
  ),

  name_or_keyword: $ => choice(
    $.name,
    $.object_keyword,
    $.metadata_keyword,
    $.property_keyword,
    $.kw_function,
    $.keyword,
  ),

  _atom: $ => choice(
    $.string,
    $.verbatim_string,
    $.date_literal,
    $.time_literal,
    $.datetime_literal,
    $.quoted_identifier,
    $.decimal,
    $.integer,
    $.identifier,

    $.control_keyword,
    $.operator_word,
    $.object_keyword,
    $.type_keyword,
    $.metadata_keyword,
    $.property_keyword,
    $.keyword,

    $.operator,
    $.semicolon,
    $.comma,
  ),

  // The external scanner keeps keywords ASCII-only; AL identifiers may be Unicode.
  identifier: _ => /[A-Za-z_\u0080-\uFFFF][A-Za-z0-9_\u0080-\uFFFF]*/,
  integer: _ => /[0-9]+[Ll]?/,
  operator: _ => token(/[!$%&*+\-./:<=>?@^|~]+/),

  semicolon: _ => ';',
